finish xss demo

--- a/xss/xss1.html
+++ b/xss/xss1.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="./static/styles.css" />
     <script>
+      document.cookie = "FLAG=NOT_REP{img_0n_3rr0r_attributes_are_insecure!!!}";
       const chooseTab = (num) => {
         let html = "Image " + parseInt(num) + "<br>";
         html += "<img src='./static/" + num + ".png' />";
